--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "description": "Budget helper application for Monzo",
   "main": "src/server.js",
   "scripts": {
-    "start": "node -r dotenv/config src/server.js"
+    "start": "node src/server.js",
+    "start-dev": "node -r dotenv/config src/server.js"
   },
   "author": "Mike McFarland",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "cookie-parse": "^0.4.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "helmet": "^3.4.0",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.8.1",
+    "morgan": "^1.8.0",
     "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
+    "promise": "^7.1.1",
+    "pug": "^2.0.0-beta11",
+    "request": "^2.79.0",
+    "sequelize": "^3.30.2",
+    "sequelize-cli": "^2.5.1",
     "simple-oauth2": "^1.0.3"
   }
 }
