--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "src/server.js",
   "scripts": {
     "migratedb": "node_modules/.bin/sequelize db:migrate",
+    "seeddb": "node_modules/.bin/sequelize db:seed:all",
+    "initdb": "npm run -s migratedb && npm run -s seeddb",
     "run": "node src/server.js",
-    "start": "npm run -s migratedb & npm run -s run",
+    "start": "npm run -s initdb & npm run -s run",
     "start-dev": "node -r dotenv/config src/server.js"
   },
   "author": "Mike McFarland",
@@ -14,17 +16,19 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "helmet": "^3.4.0",
     "jsonwebtoken": "^7.2.1",
-    "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "promise": "^7.1.1",
     "pug": "^2.0.0-beta11",
+    "pug-bootstrap": "0.0.11",
     "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
     "sequelize-cli": "^2.5.1",
     "simple-oauth2": "^1.0.3"
