--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Mike McFarland",
   "license": "ISC",
   "dependencies": {
+    "accounting": "^0.4.1",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.3",
@@ -21,6 +23,7 @@
     "express": "^4.14.1",
     "helmet": "^3.4.0",
     "jsonwebtoken": "^7.2.1",
+    "memory-cache": "^0.1.6",
     "morgan": "^1.8.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
