--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^3.4.0",
     "jsonwebtoken": "^7.2.1",
     "memory-cache": "^0.1.6",
+    "moment": "^2.17.1",
     "morgan": "^1.8.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
