--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "helmet": "^3.4.0",
+    "json2csv": "^3.7.3",
     "jsonwebtoken": "^7.2.1",
     "memory-cache": "^0.1.6",
     "moment": "^2.17.1",
