changed gulp task to fail for hint failure

--- a/src/config.json
+++ b/src/config.json
@@ -1,14 +1,19 @@
 {
   "development": {
-    "use_env_variable": "DATABASE_URL", 
+    "username": "michael.mcfarland",
+    "password": null,
+    "database": "postgres",
+    "host": "localhost",
+    "dialect": "postgres", 
     "seederStorage": "sequelize"
   },
   "test": {
     "use_env_variable": "DATABASE_URL", 
-     "seederStorage": "sequelize"
+    "seederStorage": "sequelize"
   },
   "production": {
     "use_env_variable": "DATABASE_URL", 
-     "seederStorage": "sequelize"
+    "seederStorage": "sequelize", 
+    "logging": false
   }
 }
