--- a/src/config.json
+++ b/src/config.json
@@ -1,19 +1,14 @@
 {
   "development": {
-    "username": "michael.mcfarland",
-    "password": null,
-    "database": "postgres",
-    "host": "localhost",
-    "dialect": "postgres", 
+    "use_env_variable": "DATABASE_URL", 
     "seederStorage": "sequelize"
   },
   "test": {
     "use_env_variable": "DATABASE_URL", 
-    "seederStorage": "sequelize"
+     "seederStorage": "sequelize"
   },
   "production": {
     "use_env_variable": "DATABASE_URL", 
-    "seederStorage": "sequelize", 
-    "logging": false
+     "seederStorage": "sequelize"
   }
 }
