--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "accounting": "^0.4.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
+    "connect-redis": "^3.2.0",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "express-session": "^1.15.1",
     "helmet": "^3.4.0",
     "json2csv": "^3.7.3",
     "jsonwebtoken": "^7.2.1",
@@ -33,6 +35,7 @@
     "promise": "^7.1.1",
     "pug": "^2.0.0-beta11",
     "pug-bootstrap": "0.0.11",
+    "redis": "^2.6.5",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
