--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^7.2.1",
     "memory-cache": "^0.1.6",
     "moment": "^2.17.1",
+    "monzo-api": "^1.0.6",
     "morgan": "^1.8.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
@@ -43,9 +44,13 @@
     "simple-oauth2": "^1.0.3"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.4",
+    "gulp-pug": "^3.2.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.1",
     "jshint": "^2.9.4"
   }
 }
