--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,14 @@
 {
     "editor.tabSize": 2,
     "git.confirmSync": false,
-    "editor.wordWrap": true
+    "editor.wordWrap": true, 
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/.DS_Store": true, 
+        "sample.env": true,
+        "README.md": true,
+        "screenshots/**/*": true
+    }
 }
