--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Budget helper application for Monzo",
   "main": "src/server.js",
   "scripts": {
+    "build": "gulp build",
+    "build-babel": "./node_modules/.bin/babel src -d dist --source-maps",
     "migratedb": "node_modules/.bin/sequelize db:migrate",
     "seeddb": "node_modules/.bin/sequelize db:seed:all",
     "initdb": "npm run -s migratedb && npm run -s seeddb",
-    "run": "node src/server.js",
-    "start": "npm run -s initdb & npm run -s run",
-    "start-dev": "node -r dotenv/config src/server.js",
-    "test": ""
+    "run": "node dist/server.js",
+    "start": "npm run -s initdb & npm run -s run"
   },
   "author": "Mike McFarland",
   "license": "ISC",
@@ -19,38 +19,39 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "connect-redis": "^3.2.0",
-    "cookie-parse": "^0.4.0",
-    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "helmet": "^3.4.0",
     "json2csv": "^3.7.3",
-    "jsonwebtoken": "^7.2.1",
-    "memory-cache": "^0.1.6",
     "moment": "^2.17.1",
-    "monzo-api": "^1.0.6",
     "morgan": "^1.8.0",
-    "pg": "^6.1.2",
-    "pg-hstore": "^2.3.2",
     "promise": "^7.1.1",
     "pug": "^2.0.0-beta11",
     "pug-bootstrap": "0.0.11",
     "redis": "^2.6.5",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
     "sequelize-cli": "^2.5.1",
     "simple-oauth2": "^1.0.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "babel-register": "^6.23.0",
     "browser-sync": "^2.18.8",
-    "browserify": "^14.1.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
+    "gulp-if": "^2.0.2",
     "gulp-jshint": "^2.0.4",
     "gulp-pug": "^3.2.0",
+    "gulp-relative-sourcemaps-source": "^0.1.5",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
-    "jshint": "^2.9.4"
+    "jshint": "^2.9.4",
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^6.6.0"
   }
 }
