--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.23.0",
     "browser-sync": "^2.18.8",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
