--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "json2csv": "^3.7.3",
     "moment": "^2.17.1",
     "morgan": "^1.8.0",
+    "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
     "promise": "^7.1.1",
     "pug": "^2.0.0-beta11",
     "pug-bootstrap": "0.0.11",
