--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "monzo-budgeter",
   "version": "0.0.1",
   "description": "Budget helper application for Monzo",
-  "engines" : { "node" : ">=6.0.0 <6.9.5" },
+  "engines": {
+    "node": ">=6.0.0 <6.9.5"
+  },
   "scripts": {
     "build": "gulp build",
     "build-babel": "./node_modules/.bin/babel src -d dist --source-maps",
@@ -52,8 +54,11 @@
     "gulp-jshint": "^2.0.4",
     "gulp-pug": "^3.2.0",
     "gulp-relative-sourcemaps-source": "^0.1.5",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
+    "gulp-watch": "^4.3.11",
+    "gulp-watch-pug": "^1.0.0",
     "jshint": "^2.9.4",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^6.6.0"
