--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "monzo-budgeter",
   "version": "0.0.1",
   "description": "Budget helper application for Monzo",
-  "engines" : { "node" : ">=6.0.0 <6.9.5" },
+  "engines": {
+    "node": ">=6.0.0 <6.9.5"
+  },
   "scripts": {
     "build": "gulp build",
     "build-babel": "./node_modules/.bin/babel src -d dist --source-maps",
@@ -25,6 +27,7 @@
     "helmet": "^3.4.0",
     "json2csv": "^3.7.3",
     "moment": "^2.17.1",
+    "monzo-api": "^1.0.8",
     "morgan": "^1.8.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
