--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
 {
     "editor.tabSize": 2,
     "git.confirmSync": false,
-    "editor.wordWrap": true, 
+    "editor.wordWrap": false, 
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
